[gd_scene load_steps=15 format=3 uid="uid://c7vkciwm1rv56"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_iv5bl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_3xl7s"]
[ext_resource type="Texture2D" uid="uid://dmd1njo57ncm5" path="res://assets/aseprite/player-hooded/Idle.png" id="2_kqr6g"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_u1clw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_00gu3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_c8rcw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_qares"]
[ext_resource type="Texture2D" uid="uid://bljgwnic8c575" path="res://assets/aseprite/player-hooded/Run.png" id="8_dv5qa"]

[sub_resource type="Curve" id="Curve_61e15"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.805263, 0.846154), -0.922566, -0.922566, 0, 0, Vector2(1, 0), -9.84303, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67psh"]
size = Vector2(127.5, 128)

[sub_resource type="Animation" id="Animation_flpmq"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kqr6g")]
}

[sub_resource type="Animation" id="Animation_35yhy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kqr6g")]
}

[sub_resource type="Animation" id="Animation_ptjnx"]
resource_name = "Run"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_dv5qa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8r5eq"]
_data = {
"Idle": SubResource("Animation_flpmq"),
"RESET": SubResource("Animation_35yhy"),
"Run": SubResource("Animation_ptjnx")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_iv5bl")
dashcurve = SubResource("Curve_61e15")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.725, 0.725)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 0)
shape = SubResource("RectangleShape2D_67psh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_kqr6g")
hframes = 8

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_3xl7s")

[node name="Actions" type="Node" parent="StateChart"]
script = ExtResource("4_u1clw")

[node name="Movement" type="Node" parent="StateChart/Actions"]
script = ExtResource("5_00gu3")
initial_state = NodePath("Dash")

[node name="Dash" type="Node" parent="StateChart/Actions/Movement"]
script = ExtResource("6_c8rcw")

[node name="To Basic" type="Node" parent="StateChart/Actions/Movement/Dash"]
script = ExtResource("7_qares")
to = NodePath("../../Basic")
event = &"finish_dash"
delay_in_seconds = "0.0"

[node name="Basic" type="Node" parent="StateChart/Actions/Movement"]
script = ExtResource("5_00gu3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Actions/Movement/Basic"]
script = ExtResource("6_c8rcw")

[node name="To Run" type="Node" parent="StateChart/Actions/Movement/Basic/Idle"]
script = ExtResource("7_qares")
to = NodePath("../../Run")
event = &"on_move"
delay_in_seconds = "0.0"

[node name="Run" type="Node" parent="StateChart/Actions/Movement/Basic"]
script = ExtResource("6_c8rcw")

[node name="To Idle" type="Node" parent="StateChart/Actions/Movement/Basic/Run"]
script = ExtResource("7_qares")
to = NodePath("../../Idle")
event = &"on_idle"
delay_in_seconds = "0.0"

[node name="To Dash" type="Node" parent="StateChart/Actions/Movement/Basic/Run"]
script = ExtResource("7_qares")
to = NodePath("../../../Dash")
event = &"on_dash"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/Actions"]
script = ExtResource("5_00gu3")
initial_state = NodePath("IdleAttack")

[node name="IdleAttack" type="Node" parent="StateChart/Actions/Attacking"]
script = ExtResource("6_c8rcw")

[node name="Primary" type="Node" parent="StateChart/Actions/Attacking"]
script = ExtResource("6_c8rcw")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Movement" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8r5eq")
}

[connection signal="state_entered" from="StateChart/Actions/Movement/Dash" to="." method="_on_dash_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Actions/Movement/Dash" to="." method="_on_dash_state_physics_processing"]
[connection signal="state_input" from="StateChart/Actions/Movement/Basic" to="." method="_on_basic_state_input"]
[connection signal="state_physics_processing" from="StateChart/Actions/Movement/Basic/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Actions/Movement/Basic/Run" to="." method="_on_run_state_physics_processing"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
